# gemini-cli-mcp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPROVEMENTS.md  PROJECT_INFO.md  README.md  pyproject.toml  test_precommit.py
.github/workflows/: ci.yml  release.yml
examples/: claude_desktop_config.json  example_usage.py
src/gemini_mcp/: __init__.py  __main__.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_cli.py  test_coverage.py  test_integration.py  test_server.py  test_tools.py
